--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         y="-0.025"
         width="1"
         height="0.05"
-        fill="grey"
+        fill="blue"
       />
       <rect
         id="cart"
@@ -71,7 +71,7 @@
         y="-0.05"
         width="0.3"
         height="0.1"
-        fill="grey"
+        fill="blue"
       />
       <rect
         id="pole"
